# advent-of-code

./: .mise.toml  README.md
2015/: .envrc  .gitignore  README.md  mix.exs
2015/config/: config.exs
2015/lib/: advent_of_code2015.ex
2015/lib/2015/: 1.ex  10.ex  11.ex  12.ex  13.ex  14.ex  15.ex  16.ex  17.ex  18.ex  19.ex  2.ex  20.ex  21.ex  23.ex  24.ex  3.ex  4.ex  5.ex  6.ex  7.ex  8.ex  9.ex
2017/: README.md  aoc2017.cabal
2017/app/: Main.hs
2017/src/: AdventOfCode.hs
2017/src/AdventOfCode/: Day6.hs  Day7.hs
2017/test/: Spec.hs
2020/: .tool-versions  README.md
2020/01/: README.md  main.hs  part1.hs  part2.hs
2020/02/: README.md  part1.hs  part2.hs
2020/03/: README.md  README.ms  part1.hs  part2.hs
2020/04/: README.md  part1.hs  part2.hs  small.txt
2020/05/: README.md  day5.hs  part1.hs  part2.hs
2020/06/: day6.hs  part1.hs  part2.hs  part2_bits.hs
2020/07/: README.md  day7.hs  input_tree.hs  part1.hs  small_tree.hs
2020/08/: day8.hs  part1.hs  part2.hs
2020/09/: day9.hs  part1.hs
2020/10/: day10.hs  part1.hs  part2.hs
2020/11/: Day11.hs  Part1.hs
2020/12/: Day12.hs  Part1.hs  input.txt
2020/13/: Part1.hs
2021/: .formatter.exs  .gitignore  .tool-versions  README.md  mix.exs
2021/config/: config.exs  runtime.exs
2021/lib/: AOCHelpers.ex  advent_of_code.ex
2021/lib/2021/: 1.ex  10.ex  11.ex  12.ex  13.ex  14.ex  15.ex  16.ex  17.ex  18.ex  19.ex  2.ex  20.ex  21.ex  22.ex  24.ex  3.ex  4.ex  5.ex  6.ex  7.ex  8.ex  9.ex
2021/lib/advent_of_code/: day01.ex  day02.ex  puzzle_solver.ex
2021/lib/mix/: advent_of_code.ex
2021/test/: advent_of_code_test.exs
2021/test/support/: puzzle_case.ex
2022/: .gitignore  LICENSE  README.md  aoc.cabal  package.yaml
2022/app/: Main.hs
2022/elixir/: .envrc  .envrc.example  .gitignore  README.md  mix.exs
2022/elixir/config/: config.exs
2022/elixir/lib/: aoc2022.ex
2022/elixir/lib/2022/: 7.ex
2022/elixir/test/: aoc2022_test.exs
2022/haskell/: .gitignore  README.md  package.yaml
2022/haskell/src/Aoc/: Day1.hs
2022/src/: Aoc.hs  Main.hs
2022/src/Aoc/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
2023/: .gitignore  9.hs  README.md
2023/config/: config.exs
2023/elixir/: .envrc  .formatter.exs  .tool-versions  mix.exs
2023/elixir/config/: config.exs
2023/lib/: AOCHelpers.ex  aoc_helpers.ex
2023/lib/2023/: 10.ex  11.ex  13.ex  2.ex  3.ex  4.ex  5.ex  7.ex  8.ex  9.ex
2023/lib/aoc_helpers/: grid.ex
2024/: .gitignore  .mise.toml  README.md  gleam.toml  manifest.toml  mix.exs
2024/config/: config.exs
2024/gleam/: README.md  gleam.toml  manifest.toml
2024/lib/2024/: 1.ex  10.ex  11.ex  12.ex  13.ex  14.ex  15.ex  2.ex  3.ex  4.ex  5.ex  6.ex  7.ex  8.ex  (+1 more)
2024/src/: aoc.gleam
2025/: .env  .gitignore  README.md  mise.toml  mix.exs
2025/config/: runtime.exs
2025/lib/: aoc.ex
(+18 files in other folders)
