name:                aoc2017
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/aoc2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     AdventOfCode
                     , AdventOfCode.Day6
                     , AdventOfCode.Day7
  build-depends:       base >= 4.7 && < 5
                     , Unique
                     , array
                     , containers
  default-language:    Haskell2010

executable aoc2017-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc2017
  default-language:    Haskell2010

test-suite aoc2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aoc2017
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc2017
