name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sloanelybutsurely/aoc#readme
license:             BSD3
license-file:        LICENSE
author:              Sloane Perrault
maintainer:          sloane.perrault@gmail.com
copyright:           none
category:            puzzles
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
